gazelle/js/tests/parse_errors/expectedStdout.txt
subbuild/subbuild-bad.ts:
	     4: bad
        ^

subdir/subdir-bad.ts:
	     3:     bad SyntaxError on line 3()
            ^

bad.ts:
	     2:     looks like some bad syntax here
            ^

